--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "The rules of Skid Isolation are a variation of the original Isolation. In the original form of the game there are two players, each with their own game piece, and a 7-by-7 grid of squares. At the beginning of the game, the first player places their piece on any square. The second player follows suit, and places their piece on any one of the available squares. From that point on, the players alternate turns moving their piece like a queen in chess (any number of open squares vertically, horizontally, or diagonally). When the piece is moved, the square that was previously occupied is blocked, and cannot be used for the remainder of the game. The first player who is unable to move their queen loses.\n",
     "\n",
-    "In this variant called the Skid Isolation, each player leaves behind a trace when they move their queen. We say the piece/queen \"skids\", and as a result the skid places a permanent block in the previously occupied block and the block \"just before\" the player's current position, through which the piece/queen passed. The opponent cannot move on or through squares blocked by this skid. For clarity, examine the scenario below:\n",
+    "In this variant called the Skid Isolation, each player leaves behind traces when they move their queen. We say the piece/queen \"skids\", and as a result the skid places a permanent block in the previously occupied block and the block \"just before\" the player's current position and the block \"just after\" the player's previous position. The opponent cannot move on or through squares blocked by this skid. For clarity, examine the scenario below:\n",
     "\n",
     "Q1 places their queen on the board, and Q2 follows suit.\n",
     "\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c748efa191514789bdc48277cd8894d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridspecLayout(children=(Button(description=' ', layout=Layout(grid_area='widget001', height='auto', width='au…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# replace RandomPlayer() with None if you want to play for both players\n",
     "#ig = InteractiveGame(RandomPlayer(), show_legal_moves=True)\n",
@@ -852,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
