--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,24 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c748efa191514789bdc48277cd8894d4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridspecLayout(children=(Button(description=' ', layout=Layout(grid_area='widget001', height='auto', width='au…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "# replace RandomPlayer() with None if you want to play for both players\n",
     "#ig = InteractiveGame(RandomPlayer(), show_legal_moves=True)\n",
@@ -867,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.15"
   }
  },
  "nbformat": 4,
