Changed to 9x9 default board, remove swap variant from board_viz

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ffbd40d5e414838b32d843e90f55521",
+       "model_id": "a9d993e31c134d39a800c766ad8877d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,6 +144,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Game is over, the winner is: NoneType - Q2\n"
+     ]
     }
    ],
    "source": [
