--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -18,9 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Welcome to Assignment 2 - Skid Isolation!\n",
+    "# Welcome to Assignment 2 - Impact Isolation!\n",
     "\n",
-    "Your task is to create an AI that can play and win a game of Skid Isolation. Your AI will be tested against several pre-baked AIs as well as your peers’ AI systems. You will implement your AI in Python 3.7, using our provided code as a starting point. \n",
+    "Your task is to create an AI that can play and win a game of Impact Isolation. Your AI will be tested against several pre-baked AIs as well as your peers’ AI systems. You will implement your AI in Python 3.7, using our provided code as a starting point. \n",
     "\n",
     "In case we haven't got this into your heads enough: **start early!!!** It is entirely possible, and probably likely, that a large part of your next 2 weeks will be devoted to this assignment, but we hope that it is worth it and you will really enjoy the assignment! \n",
     "\n",
@@ -56,26 +56,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rules of Skid Isolation are a variation of the original Isolation. In the original form of the game there are two players, each with their own game piece, and a 7-by-7 grid of squares. At the beginning of the game, the first player places their piece on any square. The second player follows suit, and places their piece on any one of the available squares. From that point on, the players alternate turns moving their piece like a queen in chess (any number of open squares vertically, horizontally, or diagonally). When the piece is moved, the square that was previously occupied is blocked, and cannot be used for the remainder of the game. The first player who is unable to move their queen loses.\n",
+    "The rules of Impact Isolation are a variation of the original Isolation. In the original form of the game there are two players, each with their own game piece, and a 7-by-7 grid of squares. At the beginning of the game, the first player places their piece on any square. The second player follows suit, and places their piece on any one of the available squares. From that point on, the players alternate turns moving their piece like a queen in chess (any number of open squares vertically, horizontally, or diagonally). When the piece is moved, the square that was previously occupied is blocked, and cannot be used for the remainder of the game. The first player who is unable to move their queen loses.\n",
     "\n",
-    "In this variant called the Skid Isolation, each player leaves behind traces when they move their queen. We say the piece/queen \"skids\", and as a result the skid places a permanent block in the previously occupied block and the block \"just before\" the player's current position and the block \"just after\" the player's previous position. The opponent cannot move on or through squares blocked by this skid. For clarity, examine the scenario below:\n",
+    "In this variant called the Impact Isolation, each player's piece creats an impact crater around itself when it moves greater than one block (effectively reducing the queen's mobility to that of a bishop). We start with 9-by-9 grid. Impact around the piece/queen is effectively 4 blocked locations to its north, south, left and right respectively. The opponent cannot move on or through squares blocked by this impact. For clarity, examine the scenario below:\n",
     "\n",
     "Q1 places their queen on the board, and Q2 follows suit.\n",
     "\n",
     "<div>\n",
-    "<img src=\"./img/1.png\" width=\"500\"/>\n",
+    "<img src=\"./img/impact_1.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
-    "Q1 makes a diagonal move across the board and leaves behind a skid, blocking some of Q2's potential future moves.\n",
+    "Q1 moves horizontally to the right for 4 blocks and creates an impact around it, consequently blocking some of Q2's potential future moves. The previous location of Q1 is also blocked along with the \"_impact_\"ed locations\n",
     "\n",
     "<div>\n",
-    "<img src=\"./img/2.png\" width=\"500\"/>\n",
+    "<img src=\"./img/impact_2.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
-    "Q2 makes a move, leaving behind her own skid, blocking some of Q1's future potential moves, as well.\n",
+    "Q2 makes a single unit block thus not creating any impact but simply blocking the previously held location.\n",
     "\n",
     "<div>\n",
-    "<img src=\"./img/3.png\" width=\"500\"/>\n",
+    "<img src=\"./img/impact_3.png\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
+    "Q1 moves dialognally south\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"./img/impact_4.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
     "The game will continue in a similar fashion until either of the queens has no cells left to move.\n",
@@ -100,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your python version is  3.7.15\n",
+      "Your python version is  3.7.16\n",
       "✅ ALL GOOD\n"
      ]
     }
@@ -134,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9d993e31c134d39a800c766ad8877d6",
+       "model_id": "fb6c85b607f940438dfd13fa1588be79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,13 +150,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Game is over, the winner is: NoneType - Q2\n"
-     ]
     }
    ],
    "source": [
@@ -871,7 +870,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -885,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
