Fix typos for clarity

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -56,9 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rules of Impact Isolation are a variation of the original Isolation. In the original form of the game there are two players, each with their own game piece, and a 7-by-7 grid of squares. At the beginning of the game, the first player places their piece on any square. The second player follows suit, and places their piece on any one of the available squares. From that point on, the players alternate turns moving their piece like a queen in chess (any number of open squares vertically, horizontally, or diagonally). When the piece is moved, the square that was previously occupied is blocked, and cannot be used for the remainder of the game. The first player who is unable to move their queen loses.\n",
+    "The rules of Impact Isolation are a variation of the original Isolation game. In the original form of the game there are two players, each with their own game piece, and a 7-by-7 grid of squares. At the beginning of the game, the first player places their piece on any square. The second player follows suit, and places their piece on any one of the available squares. From that point on, the players alternate turns moving their piece like a queen in chess (any number of open squares vertically, horizontally, or diagonally). When the piece is moved, the square that was previously occupied is blocked, and cannot be used for the remainder of the game. The first player who is unable to move their queen loses.\n",
     "\n",
-    "In this variant called the Impact Isolation, each player's piece creats an impact crater around itself when it moves greater than one block (effectively reducing the queen's mobility to that of a bishop). We start with 9-by-9 grid. Impact around the piece/queen is effectively 4 blocked locations to its north, south, left and right respectively. The opponent cannot move on or through squares blocked by this impact. For clarity, examine the scenario below:\n",
+    "In this variant called Impact Isolation, each player's piece creats an impact crater around itself when it moves **more than one block** in any direction. This impact crater blocks 4 locations (North, South, East, West) around the location the queen moves to, effectively reducing the queen's mobility to that of a bishop the next turn. We start with a 9-by-9 grid in this variation. Neither players can move on or through squares blocked by this impact. For clarity, examine the scenario below:\n",
     "\n",
     "Q1 places their queen on the board, and Q2 follows suit.\n",
     "\n",
@@ -78,7 +78,7 @@
     "<img src=\"./img/impact_3.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
-    "Q1 moves dialognally south\n",
+    "Q1 moves diagonally southwest.\n",
     "\n",
     "<div>\n",
     "<img src=\"./img/impact_4.png\" width=\"500\"/>\n",
@@ -97,27 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your python version is  3.7.16\n",
-      "✅ ALL GOOD\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run helpers/verify_config.py # verify the environment setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,26 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb6c85b607f940438dfd13fa1588be79",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridspecLayout(children=(Button(description=' ', layout=Layout(grid_area='widget001', height='auto', width='au…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# replace RandomPlayer() with None if you want to play for both players\n",
     "#ig = InteractiveGame(RandomPlayer(), show_legal_moves=True)\n",
@@ -176,7 +152,7 @@
    "outputs": [],
    "source": [
     "# Here is an example of how to visualise a game replay of 2 random players\n",
-    "game = Board(RandomPlayer(), RandomPlayer(), 7, 7)\n",
+    "game = Board(RandomPlayer(), RandomPlayer(), 9, 9)\n",
     "winner, move_history, termination = game.play_isolation(time_limit=1000, print_moves=False)\n",
     "\n",
     "bg = ReplayGame(game, move_history, show_legal_moves=True)\n",
@@ -222,7 +198,7 @@
     "\n",
     "These functions will inform the value judgements your AI will make when choosing moves. There are 2 classes:\n",
     "\n",
-    "- `OpenMoveEvalFn` -Returns the number of available moves open for your player minus the number of moves available for opponent player. All baseline tests will use this function. **This is mandatory**\n",
+    "- `OpenMoveEvalFn` - Returns the number of available moves open for your player minus the number of moves available for opponent player. All baseline tests will use this function. **This is mandatory**\n",
     "- `CustomEvalFn` - You are encouraged to create your own evaluation function here.\n",
     "\n",
     "#### Notes on these classes\n",
@@ -870,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -884,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.15"
   }
  },
  "nbformat": 4,
