--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -252,9 +252,9 @@
     "| 1b | 20 points | Your AI defeats an agent with OpenMoveEval function that uses minimax to level 2  >= 70% of the times. |\n",
     "| 1b | 20 points | Your AI defeats an agent with OpenMoveEval function that uses alphabeta to level 4  >= 70% of the times. |\n",
     "| 1c | 20 points | Your AI defeats an agent with OpenMoveEval function that uses iterative deepening and alpha-beta pruning >= 70% of the time. |\n",
-    "| 1c | 5 points | Your AI defeats an agent with Peter's secret evaluation function that uses iterative deepening and alpha-beta pruning and optimizes various aspects of the game player >= 80% of the time  |\n",
+    "| 1c | 5 points (Extra Credit) | Your AI defeats an agent with Peter's secret evaluation function that uses iterative deepening and alpha-beta pruning and optimizes various aspects of the game player >= 80% of the time  |\n",
     "\n",
-    "As you can see from the table there are three autograded sections, each having the following submission frequency restrictions:\n",
+    "We have changed the last 5 points to Extra Credit this semester, so the assignment will be graded out ot 95. As you can see from the table there are three autograded sections, each having the following submission frequency restrictions:\n",
     "- **Section 1a** - 1 submission per 30 minutes.\n",
     "- **Section 1b** - 3 submissions per 360 minutes.\n",
     "- **Section 1c** - 3 submissions per 360 minutes."
@@ -710,7 +710,7 @@
     "- You're right, and that's on purpose. Each of the bullets below try to walk you through how you may want to think about beating the remaining agents.\n",
     "    - First up is the alphabeta agent. Vanilla alphabeta (that is, alphabeta with no optimization) may not do so well against this agent. However, any agent that searches deeper with the same algorithm probably has a bigger advantage. You may learn about a method that allows your algorithm to search in such a way that you can find the maximum search depth without running out of time. This will probably come up in class or you can read through the book to find out what you are looking for.\n",
     "    - Next to beat is the agent with iterative deepening. This one is a little harder to think about, given that you may have used all the tools that you may think of to try a make a \"better\" agent. But you may have just implemented the evaluation function that was discussed in class. Maybe we can do better - like checking for winning moves and prioritizing those! Or if you are feeling really creative, you can always try editing the `CustomEvalFn` below this cell and come up with an awesome idea of your own.\n",
-    "    - Now to Peter's agent with the secret evaluation function. Here we have nothing to tell you. Use everything in your toolbox and within the class rules to defeat it. This is by far the hardest 5 points to get! Good luck and have fun!\n",
+    "    - Now to Peter's agent with the secret evaluation function (Extra Credit). Here we have nothing to tell you. Use everything in your toolbox and within the class rules to defeat it. This is by far the hardest 5 points to get! Good luck and have fun!\n",
     "    \n",
     "- Remember that you may want to edit the methods in the cell with the `CustomPlayer` class to try and implement some of the above. You are certainly free to as long as you adhere to the general rules about editing provided code (which can be found by reading the cell above the `CustomPlayer` code)."
    ]
@@ -860,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
