Clarified local test case

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -434,7 +434,7 @@
    "metadata": {},
    "source": [
     "## About the local test above\n",
-    "If you want to edit the test (which you most definitely can), then edit the source code back in `player_submission_tests.py`."
+    "You should look at the test in `player_submission_tests.py` to verify that your evaluation function is correct. If you want to edit the test (which you most definitely can), then edit the source code back in `player_submission_tests.py`."
    ]
   },
   {
